added background image

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 .top-section {
-  background-image: Url("https://s3.amazonaws.com/shecodesio-production/uploads/files/000/043/388/original/netbiz.image.jpeg?1660298691");
+  background-image: Url("src/netbiz.image.jpg");
 }
 
 h1 {
