--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,12 @@
 .top-section {
-  background-image: Url("src/netbiz.image.jpg");
+  width: 1100px;
+  background-image: url("src/netbiz.image.jpg");
+  background-size: 100%;
+  height: 700px;
+  background-repeat: no-repeat;
 }
 
 h1 {
   color: #fff;
-  font-family: "Concert One", cursive;
+  font-family: "Be Vietnam Pro", sans-serif;
 }
