--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 .top-section {
-  width: 1100px;
+  width: 100%;
   background-image: url("src/netbiz.image.jpg");
   background-size: 100%;
   height: 700px;
@@ -20,4 +20,19 @@ li {
   text-decoration: none;
   font-family: "Be Vietnam Pro", sans-serif;
   display: inline;
+}
+
+.main-navbar {
+  float: left;
+}
+
+.navbar-button {
+  margin: 0 auto;
+  background-color: #000;
+  color: #fff;
+  font-family: "Be Vietnam Pro", sans-serif;
+  padding: 10px 20px;
+  border-radius: 30px;
+  border-color: #000;
+  text-decoration: none;
 }
