--- a/styles.css
+++ b/styles.css
@@ -15,16 +15,28 @@ li {
   display: inline;
 }
 
-nav {
-  backdrop-filter: blur(5px);
+div.navbar-background {
+  background-color: #000;
+  opacity: 0.5;
+  backdrop-filter: blur(10px);
+}
+
+.navbar {
+  display: flex;
+  width: 100%;
+  display: inline-block;
+  text-align: center;
 }
 
 .navbar-link {
   color: white;
   text-decoration: none;
   font-family: "Be Vietnam Pro", sans-serif;
-  display: inline;
+  display: inline-block;
   text-align: center;
+  padding: 10px;
+  padding: 10;
+  list-style: none;
 }
 
 #main-navbar {
@@ -50,11 +62,16 @@ nav {
 }
 
 .heading {
-  margin-top: 300px;
+  margin-left: 100px;
+  font-size: 50px;
+  width: 50%;
+  margin-top: 200px;
+  font-weight: bold;
 }
 
 .started {
   margin-top: 10px;
+  margin-left: 100px;
   background-color: #000;
   color: #fff;
   font-family: "Be Vietnam Pro", sans-serif;
