--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
-.top-section {
+.container {
   width: 100%;
-  background-image: url("src/netbiz.image.jpg");
+  position: fixed;
+  background-image: url("src/pexels-photo-931018.jpeg");
   background-size: 100%;
   height: 700px;
   background-repeat: no-repeat;
@@ -15,13 +16,9 @@ li {
   display: inline;
 }
 
-div.navbar-background {
-  background-color: #000;
-  opacity: 0.5;
-  backdrop-filter: blur(10px);
-}
-
 .navbar {
+  background: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(40px);
   display: flex;
   width: 100%;
   display: inline-block;
@@ -35,7 +32,6 @@ div.navbar-background {
   display: inline-block;
   text-align: center;
   padding: 10px;
-  padding: 10;
   list-style: none;
 }
 
@@ -80,4 +76,25 @@ div.navbar-background {
   border-color: #000;
   text-decoration: none;
   font-size: 18px;
+}
+
+.booking {
+  margin: 20px;
+  text-align: center;
+}
+
+.form {
+  display: inline-block;
+  margin: 0 auto;
+}
+
+.form-style {
+  border: none;
+  border-bottom: 1.5px solid rgb(168, 168, 168);
+}
+
+.form-label {
+  position: absolute;
+  top: 0;
+  display: block;
 }
