--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,12 @@
-.container {
+body {
+  width: 1100px;
+}
+
+.main-section {
   width: 100%;
-  position: fixed;
   background-image: url("src/pexels-photo-931018.jpeg");
-  background-size: 100%;
-  height: 700px;
   background-repeat: no-repeat;
+  height: 600px;
 }
 
 h1 {
@@ -53,7 +55,6 @@ li {
   text-decoration: none;
   position: absolute;
   top: 25px;
-  right: 40px;
   font-size: 18px;
 }
 
@@ -61,7 +62,7 @@ li {
   margin-left: 100px;
   font-size: 50px;
   width: 50%;
-  margin-top: 200px;
+  margin-top: 150px;
   font-weight: bold;
 }
 
@@ -76,25 +77,4 @@ li {
   border-color: #000;
   text-decoration: none;
   font-size: 18px;
-}
-
-.booking {
-  margin: 20px;
-  text-align: center;
-}
-
-.form {
-  display: inline-block;
-  margin: 0 auto;
-}
-
-.form-style {
-  border: none;
-  border-bottom: 1.5px solid rgb(168, 168, 168);
-}
-
-.form-label {
-  position: absolute;
-  top: 0;
-  display: block;
 }
