changing footer form

--- a/styles.css
+++ b/styles.css
@@ -78,3 +78,20 @@ li {
   text-decoration: none;
   font-size: 18px;
 }
+
+.bottom {
+  display: grid;
+  align-items: center;
+  text-align: center;
+}
+
+.input {
+  border: none;
+  border-bottom: #000 1px solid;
+  height: 30px;
+  text-align: center;
+}
+
+.labels {
+  margin: 20px;
+}
