--- a/styles.css
+++ b/styles.css
@@ -10,9 +10,10 @@ header {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background: rgba(0, 0, 0, 0.5);
+  background: rgba(0, 0, 0, 0.3);
   width: 100%;
   backdrop-filter: blur(10px);
+  padding: 10px;
 }
 
 .main-section {
@@ -64,10 +65,11 @@ li {
 
 #title {
   margin-left: 100px;
-  font-size: 50px;
+  font-size: 35px;
+  font-weight: 900px;
   width: 50%;
   margin-top: 150px;
-  font-weight: bold;
+  text-shadow: 1px 0px #a0a0a0;
   color: #fff;
   font-family: "Be Vietnam Pro", sans-serif;
 }
@@ -120,8 +122,8 @@ input {
   color: #fff;
   font-family: "Be Vietnam Pro", sans-serif;
   padding: 10px;
-  padding-left: 13px;
-  padding-right: 13px;
+  padding-left: 12px;
+  padding-right: 12px;
   border-radius: 70%;
   width: 100px;
   height: 100px;
