--- a/styles.css
+++ b/styles.css
@@ -35,8 +35,17 @@ header {
   font-weight: 900px;
 }
 
+.logo:hover {
+  color: #339c8f;
+  cursor: pointer;
+}
+
 li {
   display: inline;
+}
+
+.navbar-link:hover {
+  cursor: pointer;
 }
 
 .navbar-link {
@@ -130,4 +139,8 @@ input {
   border-color: #000;
   text-decoration: none;
   font-size: 12px;
+}
+
+.circle-button:hover {
+  cursor: pointer;
 }
